--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,15 @@ body {
   text-align: center;
   -webkit-font-smoothing: antialiased;
   color: #fff;
+  margin-left: 15px;
 }
 
 .movies {
-  display: inline-block;
+  display: flex;
   box-sizing: border-box;
   margin-left: -15px;
   margin-right: -15px;
+  border: 1px blanchedalmond;
 }
 
 .genres__genre {
