--- a/src/Movie.css
+++ b/src/Movie.css
@@ -1,12 +1,17 @@
 .movie {
   display: block;
   flex-direction: column;
-  width: 25%;
+  width: ;
   margin-bottom: 15px;
   position: relative;
   min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 15px;
+  border: 1px solid gray;
+  margin-right: 30px;
+  border-radius: 15px;
+  -moz-box-shadow: inset 0 0 10px #fff;
+  -webkit-box-shadow: inset 0 0 10px #fff;
+  box-shadow: inset 0 0 10px #fff;
 }
 
 .moive__poster {
